// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Snapshots alert renders as expected 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

.emotion-7:hover::after {
  box-shadow: 0 0 0 7px #f0f1f2;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 0;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0 ~ div:first-of-type {
  border: 1px solid #ffa126;
  box-shadow: 0 0 0 1px #ffa126,0 0 0 2px #c06c00;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #ffa126;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #ffa126, 0 0 0 5px #c06c00;
}

[data-whatinput="mouse"] .emotion-0 ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0 ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0 ~ div:first-of-type {
  border: 1px solid #ffa126;
  box-shadow: 0 0 0 1px #ffa126,0 0 0 2px #c06c00;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #ffa126;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #ffa126, 0 0 0 5px #c06c00;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):focus ~ div:first-of-type {
  border: 1px solid #ffa126;
  box-shadow: 0 0 0 1px #ffa126,0 0 0 2px #c06c00;
}

<div
  className="emotion-9 emotion-10"
>
  <div
    className="emotion-7 emotion-8"
    disabled={false}
  >
    <input
      checked={false}
      className="emotion-0 emotion-1"
      disabled={false}
      id="123"
      type="checkbox"
    />
    <div
      checked={false}
      className="emotion-5 emotion-6"
      disabled={false}
    >
      <div
        checked={false}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snapshots checked alert renders as expected 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

.emotion-7:hover::after {
  box-shadow: 0 0 0 7px #f0f1f2;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0 ~ div:first-of-type {
  border: 1px solid #ffa126;
  box-shadow: 0 0 0 1px #ffa126,0 0 0 2px #c06c00;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #ffa126;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #ffa126, 0 0 0 5px #c06c00;
}

[data-whatinput="mouse"] .emotion-0 ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0 ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0 ~ div:first-of-type {
  border: 1px solid #ffa126;
  box-shadow: 0 0 0 1px #ffa126,0 0 0 2px #c06c00;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #ffa126;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #ffa126, 0 0 0 5px #c06c00;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):focus ~ div:first-of-type {
  border: 1px solid #ffa126;
  box-shadow: 0 0 0 1px #ffa126,0 0 0 2px #c06c00;
}

<div
  className="emotion-9 emotion-10"
>
  <div
    className="emotion-7 emotion-8"
    disabled={false}
  >
    <input
      checked={true}
      className="emotion-0 emotion-1"
      disabled={false}
      id="123"
      type="checkbox"
    />
    <div
      checked={true}
      className="emotion-5 emotion-6"
      disabled={false}
    >
      <div
        checked={true}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snapshots checked error renders as expected 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

.emotion-7:hover::after {
  box-shadow: 0 0 0 7px #f0f1f2;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0 ~ div:first-of-type {
  border: 1px solid #de2e21;
  box-shadow: 0 0 0 1px #de2e21,0 0 0 2px transparent;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #de2e21;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #de2e21, 0 0 0 5px transparent;
}

[data-whatinput="mouse"] .emotion-0 ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0 ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0 ~ div:first-of-type {
  border: 1px solid #de2e21;
  box-shadow: 0 0 0 1px #de2e21,0 0 0 2px transparent;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #de2e21;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #de2e21, 0 0 0 5px transparent;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):focus ~ div:first-of-type {
  border: 1px solid #de2e21;
  box-shadow: 0 0 0 1px #de2e21,0 0 0 2px transparent;
}

<div
  className="emotion-9 emotion-10"
>
  <div
    className="emotion-7 emotion-8"
    disabled={false}
  >
    <input
      checked={true}
      className="emotion-0 emotion-1"
      disabled={false}
      id="123"
      type="checkbox"
    />
    <div
      checked={true}
      className="emotion-5 emotion-6"
      disabled={false}
    >
      <div
        checked={true}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snapshots error renders as expected 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

.emotion-7:hover::after {
  box-shadow: 0 0 0 7px #f0f1f2;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 0;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0 ~ div:first-of-type {
  border: 1px solid #de2e21;
  box-shadow: 0 0 0 1px #de2e21,0 0 0 2px transparent;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #de2e21;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #de2e21, 0 0 0 5px transparent;
}

[data-whatinput="mouse"] .emotion-0 ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0 ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0 ~ div:first-of-type {
  border: 1px solid #de2e21;
  box-shadow: 0 0 0 1px #de2e21,0 0 0 2px transparent;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #de2e21;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #de2e21, 0 0 0 5px transparent;
}

[data-whatinput="mouse"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:not(:checked):focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:not(:checked):focus ~ div:first-of-type {
  border: 1px solid #de2e21;
  box-shadow: 0 0 0 1px #de2e21,0 0 0 2px transparent;
}

<div
  className="emotion-9 emotion-10"
>
  <div
    className="emotion-7 emotion-8"
    disabled={false}
  >
    <input
      checked={false}
      className="emotion-0 emotion-1"
      disabled={false}
      id="123"
      type="checkbox"
    />
    <div
      checked={false}
      className="emotion-5 emotion-6"
      disabled={false}
    >
      <div
        checked={false}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snapshots renders as expected 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

.emotion-7:hover::after {
  box-shadow: 0 0 0 7px #f0f1f2;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-9 emotion-10"
>
  <div
    className="emotion-7 emotion-8"
    disabled={false}
  >
    <input
      checked={true}
      className="emotion-0 emotion-1"
      disabled={false}
      id="123"
      type="checkbox"
    />
    <div
      checked={true}
      className="emotion-5 emotion-6"
      disabled={false}
    >
      <div
        checked={true}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snapshots renders as expected 2`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

<div
  className="emotion-9 emotion-10"
>
  <div
    className="emotion-7 emotion-8"
    disabled={true}
  >
    <input
      checked={true}
      className="emotion-0 emotion-1"
      disabled={true}
      id="123"
      type="checkbox"
    />
    <div
      checked={true}
      className="emotion-5 emotion-6"
      disabled={true}
    >
      <div
        checked={true}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snapshots renders as expected 3`] = `
.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 0;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-9 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding-left: 12px;
  color: #a1aab3;
}

<div
  className="emotion-11 emotion-12"
>
  <div
    className="emotion-7 emotion-8"
    disabled={true}
  >
    <input
      checked={false}
      className="emotion-0 emotion-1"
      disabled={true}
      id="123"
      type="checkbox"
    />
    <div
      checked={false}
      className="emotion-5 emotion-6"
      disabled={true}
    >
      <div
        checked={false}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  <label
    className="emotion-9 emotion-10"
    disabled={true}
    htmlFor="123"
  >
    checkbox
  </label>
</div>
`;

exports[`Checkbox Snapshots renders as expected 4`] = `
.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
}

.emotion-7 {
  height: 18px;
}

.emotion-7::after {
  border-radius: 999px;
  box-shadow: 0 0 0 0 #f0f1f2;
  content: "";
  display: inline-block;
  height: 18px;
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
  width: 18px;
  z-index: 1;
}

.emotion-7:hover::after {
  box-shadow: 0 0 0 7px #f0f1f2;
}

.emotion-0 {
  border-radius: 2px;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-top: -3px;
  margin-left: -3px;
  position: absolute;
  opacity: 0;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0:not(:checked):not(:disabled):not(:focus):hover ~ div:first-of-type {
  border-color: #333d47;
}

.emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
  background-color: #0875e1;
}

.emotion-0:disabled ~ div:first-of-type {
  border-color: #b9c0c7;
  background-color: #f6f7f8;
}

.emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:focus ~ div:first-of-type {
  border-color: #0875e1;
  border-width: 2px;
  z-index: 2;
  box-shadow: none;
}

.emotion-0:checked:focus ~ div:first-of-type {
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0:checked:focus ~ div:first-of-type span {
  margin-left: -7px;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type {
  border: 1px solid #7b858f;
  box-shadow: none;
}

[data-whatinput="mouse"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="touch"] .emotion-0:focus ~ div:first-of-type span,
[data-whatinput="pointer"] .emotion-0:focus ~ div:first-of-type span {
  margin-left: -6px;
}

[data-whatinput="mouse"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:checked ~ div:first-of-type {
  border-color: #0875e1;
}

[data-whatinput="mouse"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="touch"] .emotion-0:disabled:checked ~ div:first-of-type,
[data-whatinput="pointer"] .emotion-0:disabled:checked ~ div:first-of-type {
  border-color: #a6d2ff;
  background-color: #a6d2ff;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #7b858f;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 2px;
  pointer-events: none;
  position: absolute;
  -webkit-transition: border 200ms ease,background 200ms;
  transition: border 200ms ease,background 200ms;
  width: 18px;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
  -webkit-transition: transform 200ms ease,opacity 200ms ease;
  transition: transform 200ms ease,opacity 200ms ease;
  opacity: 0;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.emotion-3 span {
  margin-left: -6px;
  -webkit-transition: margin 200ms ease;
  transition: margin 200ms ease;
}

.emotion-9 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding-left: 12px;
  cursor: pointer;
}

<div
  className="emotion-11 emotion-12"
>
  <div
    className="emotion-7 emotion-8"
    disabled={false}
  >
    <input
      checked={false}
      className="emotion-0 emotion-1"
      disabled={false}
      id="123"
      type="checkbox"
    />
    <div
      checked={false}
      className="emotion-5 emotion-6"
      disabled={false}
    >
      <div
        checked={false}
        className="emotion-3 emotion-4"
      >
        <span
          className="emotion-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
  <label
    className="emotion-9 emotion-10"
    disabled={false}
    htmlFor="123"
  >
    checkbox
  </label>
</div>
`;
